fixed my bug for notes in editor being cut off.

--- a/src/App.css
+++ b/src/App.css
@@ -79,15 +79,6 @@ button {
     height: fit-content;
 }
 
-.card-title {
-    text-align: center;
-    height: 12vh;
-    width: 230px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
 .center {
     display: flex;
     justify-content: center;
@@ -195,18 +186,17 @@ header {
     flex-direction: row;
 }
 
-.noteText {
-    padding-top: 10px;
-    text-align: left;
-    height: 40vh;
-    width: 200px;
+.spacer {
+    padding-left: 5px;
+}
+
+#shorthand {
+    text-align: center;
+    height: 12vh;
+    width: 230px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-}
-
-.spacer {
-    padding-left: 5px;
 }
 
 .textarea {
